md文档补充，导入报错问题解决