@@ -10,6 +10,16 @@
 
 >数据sql导入导出命令
 
-1---》pg_dump -h yourhost -p 7654 -U postgres -W -F p -b -v -f ruoyi_backup.sql ruoyi
-2---》createdb -h localhost -p 5432 -U postgres mylocaldb
-3---》psql -h localhost -p 5432 -U postgres -d mylocaldb -f ruoyi_backup.sql
+```sql
+--第一步
+pg_dump -h yourhost -p 7654 -U postgres -W -F p -b -v -f ruoyi_backup.sql ruoyi
+--第二步
+createdb -h localhost -p 5432 -U postgres mylocaldb
+--第三步
+psql -h localhost -p 5432 -U postgres -d mylocaldb -f ruoyi_backup.sql
+```
+>导入模块如果出现导入失败之类的错误，请尝试在启动的配置上打开modify options里面的add vm option添加以上语句，看是否能解决。
+```md
+--add-opens java.base/java.util=ALL-UNNAMED
+```
+
